syntax = "proto3";

package grpc;

option go_package = "./grpc";

import "google/protobuf/empty.proto";

service CategoryBookHandler {
  rpc Add(AddCategoryBookRequest) returns (google.protobuf.Empty) {}
  rpc Delete(DeleteCategoryBookRequest) returns (google.protobuf.Empty) {}
}

message CategoryBook {
  uint32 id = 1;
  uint32 category_id = 2;
  uint32 book_id = 3;
}

message AddCategoryBookRequest {
  uint32 category_id = 1;
  uint32 book_id = 2;
}

message DeleteCategoryBookRequest {
  uint32 id = 1;
}
